--- a/styles/plan.module.scss
+++ b/styles/plan.module.scss
@@ -1,5 +1,6 @@
 $page-bg-color: #EFF2F6;
 $component-bg-color: #FBFBFB;
+$brand-color: #134EE7;
 
 .root {
   background-color: #EFF2F6;
@@ -117,7 +118,7 @@ $component-bg-color: #FBFBFB;
     object-fit: cover;
     aspect-ratio: 308 / 210;
     width: 100%;
-    border-radius: 4px;
+    border-radius: 5px;
   }
 }
 
@@ -162,3 +163,113 @@ $component-bg-color: #FBFBFB;
   }
 }
 
+.modalWrapper {
+  padding: 24px;
+}
+
+.modalTop {
+  display: flex;
+}
+
+.modalImg {
+  object-fit: cover;
+  aspect-ratio: 312 / 380;
+  width: 312px;
+  border-radius: 5px;
+  box-shadow: 0px 1px 2px -1px rgba(16, 24, 40, 0.10), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
+}
+
+.modalDetails {
+  padding-left: 24px;
+
+  h3 {
+    color: #2B3645;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 16px;
+    margin-top: 4px;
+  }
+}
+.completed {
+  color: #A6AABA;
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  margin-top: 12px;
+}
+
+.modalAvgCost {
+  color: $brand-color;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 16px;
+  margin-top: 24px;
+
+  span {
+    color: #A6AABA;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+  }
+}
+
+.modalPros {
+  margin-top: 40px;
+
+  h4 {
+    color: #2B3645;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px;
+  }
+}
+
+.modalProsList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 16px;
+  margin-top: 24px;
+}
+
+.modalPro {
+  aspect-ratio: 260 / 90;
+  background-color: #FBFBFB;
+  border-radius: 4px;
+  border: 1px solid #DBE4EE;
+  box-shadow: 0px 1px 2px -1px rgba(16, 24, 40, 0.10), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
+  flex: 1 1 auto;
+  padding: 8px;
+}
+
+.proPlaceholder {
+  border-radius: 2px;
+  background-color: $page-bg-color;
+  width: 75px;
+  height: 75px;
+}
+
+.modalBenefits {
+
+}
+
+.benefitsHeading {
+  color: #2B3645;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 16px;
+  margin-top: 28px;
+}
+
+.benefitsList {
+  margin-left: 16px;
+  li {
+    color: #A6AABA;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 15px;
+    margin-top: 10px;
+  }
+}
