--- a/styles/plan.module.scss
+++ b/styles/plan.module.scss
@@ -89,8 +89,9 @@ $brand-color: #134EE7;
 }
 
 .main {
-  padding: 0 40px 40px 30px;
+  padding: 0 29px 40px 30px;
   flex: 1;
+  max-width: 1270px;
 
   .recommendations {
     display: flex;
@@ -181,6 +182,27 @@ $brand-color: #134EE7;
       position: absolute;
       bottom: 24px;
       right: 16px;
+    }
+  }
+
+  .more {
+    height: 105px;
+    background-color: $component-bg-color;
+    box-shadow: 0px 1px 2px -1px rgba(16, 24, 40, 0.10), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
+    display: flex;
+    border-radius: 16px;
+    min-width: 300px;
+    max-width: 350px;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    .moreIcon {
+      height: 21px;
+      width: 21px;
     }
   }
 }
@@ -308,5 +330,34 @@ $brand-color: #134EE7;
   border-radius: 8px 0 0 0 ;
   background: #FBFBFB;
   width: 388px;
-  padding: 30px 22px;
+  padding: 28px 22px;
+
+  .projectPlan {
+    color: #031228;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 23px;
+    display: flex;
+
+    .sparkles {
+      margin-right: 8px;
+    }
+  }
+
+  .line {
+    border-top: 1px solid #E4E6EA;
+    width: 288px;
+    margin: 10px 0 32px;
+  }
+
+  ol {
+    color: #2B3645;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    li {
+      margin: 32px 0 32px 23px;
+    }
+  }
 }
