--- a/components/Modal.module.scss
+++ b/components/Modal.module.scss
@@ -15,6 +15,7 @@
 }
 
 .content {
+  box-shadow: 0px 8px 10px -6px rgba(16, 24, 40, 0.10), 0px 20px 25px -5px rgba(16, 24, 40, 0.10);
   background-color: white;
   border-radius: 16px;
   max-width: 100%;
