--- a/styles/plan.module.scss
+++ b/styles/plan.module.scss
@@ -360,4 +360,34 @@ $brand-color: #134EE7;
       margin: 32px 0 32px 23px;
     }
   }
+
+  .selectedButtons {
+    display: flex;
+    gap: 16px;
+    bottom: 123px;
+    position: absolute;
+
+    .button, .proButton {
+      background-color: #FFF;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 4px;
+      border: 1px solid $brand-color;
+      height: 40px;
+      width: 165px;
+      color: $brand-color;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 20px;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .proButton {
+      background-color: $brand-color;
+      color: #FFF;
+    }
+  }
 }
