--- a/styles/start.module.scss
+++ b/styles/start.module.scss
@@ -10,6 +10,7 @@
   flex: 1 0 100%;
   flex-direction: row;
   height: 100%;
+  justify-content: space-between;
 }
 
 .formWrapper {
@@ -28,6 +29,52 @@
 
 .image {
   background-size: cover;
-  flex: 1;
+  flex: 0 1 860px;
   background-image: url('/start-bg.jpeg');
+}
+
+.form {
+  display: flex;
+  padding: 0;
+  gap: 12px;
+  flex: 1 0 0;
+  align-self: stretch;
+  margin-top: 67px;
+}
+
+.input {
+  border-radius: 6px;
+  border: 1px solid #E5E5E5;
+  background: #FFF;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  height: 48px;
+  width: 383px;
+  text-transform: uppercase;
+  padding: 8px 12px;
+  line-height: 20px;
+
+  &::placeholder {
+    text-transform: none;
+    color: #A3A3A3;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+}
+
+.button {
+  border-radius: 6px;
+  color: #FFF;
+  background: #134EE7;
+  border: 0 none;
+  padding: 10px 16px;
+}
+
+.label {
+  color: #2B3645;
+  display: block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 8px 0 0 12px;
 }
