--- a/styles/plan.module.scss
+++ b/styles/plan.module.scss
@@ -134,7 +134,7 @@ $brand-color: #134EE7;
       color: #2B3645;
       font-size: 18px;
       font-weight: 600;
-      line-height: 16px;
+      line-height: 19px;
     }
 
     .benefit {
@@ -144,7 +144,7 @@ $brand-color: #134EE7;
       font-size: 14px;
       font-weight: 400;
       line-height: 16px;
-      margin-top: 12px;
+      margin-top: 10px;
       .sparkles {
         height: 20px;
         width: 20px;
@@ -191,8 +191,8 @@ $brand-color: #134EE7;
     box-shadow: 0px 1px 2px -1px rgba(16, 24, 40, 0.10), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
     display: flex;
     border-radius: 16px;
-    min-width: 300px;
-    max-width: 350px;
+    width: 350px;
+    //max-width: 350px;
     align-items: center;
     justify-content: center;
 
@@ -230,7 +230,7 @@ $brand-color: #134EE7;
       color: #2B3645;
       font-size: 24px;
       font-weight: 600;
-      line-height: 16px;
+      line-height: 24px;
       margin-top: 4px;
     }
   }
